# FairShare-app

./: Cargo.toml  Rocket.toml
src/: db.rs  main.rs  models.rs  routes.rs
