[package]
name = "hesapla-app"
version = "0.1.0"
edition = "2024"

[dependencies]
mongodb = "3.3.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["mongodb"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
[build-dependencies]
routes = "0.1.0"
